[package]
name = "scrawl"
version = "1.1.0"
edition = "2021"
authors = ["M. L. McKnight <ml.innovations.research.lab@gmail.com>"]
description = "Structured Compressed Runtime for Agent-to-Agent Workload Language — binary ISA and VM for AI agent communication"
license = "Apache-2.0"
repository = "https://github.com/mlinnovations/scrawl"
keywords = ["ai", "agents", "isa", "vm", "communication"]
categories = ["algorithms", "encoding", "simulation"]
rust-version = "1.70"

[dependencies]
# Zero external dependencies — mirrors the Python philosophy

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_scrawl"
harness = false

[[example]]
name = "heartbeat"

[[example]]
name = "delta_sync"

[[example]]
name = "consensus"
